--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.12" />
 
     <Button
-        android:id="@+id/button_salir"
+        android:id="@+id/button_salir3"
         android:layout_width="278dp"
         android:layout_height="65dp"
         android:backgroundTint="#E040FB"
